--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="https://github.com/chowdhurysuman/The-Communi" class="btn">View on GitHub</a>
       <a href="https://github.com/chowdhurysuman/The-Communi/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/chowdhurysuman/The-Communi/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+ 
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -72,9 +72,23 @@
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div> <!-- /.navbar-collapse -->
+  </div> <!-- /.container-fluid -->
 </nav>
+    </section>
+     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+     <!-- Include all compiled plugins (below), or include individual files as needed -->
+     <!--<script src="C:\Users\suman\Downloads\bootstrap-3.3.7-dist (1)\bootstrap-3.3.7-dist\js\bootstrap.min.js"></script>- Latest compiled and minified CSS -->
+
+     <!-- Optional theme -->
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+     <!-- Latest compiled and minified JavaScript -->
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
+    
 
     
   
