--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
   </head>
   <body>
     <section class="page-header">
-      <div class="project-name">The-communi</div>
-      <h2 class="project-tagline">Code repository for The Communi Website</h2>
-      <a href="https://github.com/chowdhurysuman/The-Communi" class="btn">View on GitHub</a>
-      <a href="https://github.com/chowdhurysuman/The-Communi/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/chowdhurysuman/The-Communi/tarball/master" class="btn">Download .tar.gz</a>
+      <div class="project-name">The Communi</div>
+      <div class="project-tagline">Let the truth prevail.....</div>
+      <a class="btn btn-social-icon btn-facebook">
+      <span class="fa fa-facebook"></span>
+      </a>
+      <a class="btn btn-social-icon btn-twitter">
+      <span class="fa fa-twitter"></span>
+      </a>
+      <a class="btn btn-social-icon btn-linkedin">
+      <span class="fa fa-linkedin"></span>
+      </a>
  
     <nav class="navbar navbar-default">
   <div class="container-fluid">
