--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
     <section class="page-header">
       <div class="project-name">The Communi</div>
       <div class="project-tagline">Let the truth prevail.....</div>
-      <a class="btn btn-social-icon btn-facebook">
-      <span class="fa fa-facebook"></span>
+      <a>
+      <i class="fa fa-facebook-square"></i>
       </a>
-      <a class="btn btn-social-icon btn-twitter">
-      <span class="fa fa-twitter"></span>
+      <a>
+      <i class="fa fa-twitter-square"></i>
       </a>
-      <a class="btn btn-social-icon btn-linkedin">
-      <span class="fa fa-linkedin"></span>
+      <a>
+      <i class="fa fa-linkedin-square"></i>
       </a>
  
     <nav class="navbar navbar-default">
