--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
     <section class="page-header">
       <div class="project-name">The Communi</div>
       <div class="project-tagline">Let the truth prevail.....</div>
+      <div class="navbar-text">
       <a>
-      <i class="fa fa-facebook-square"></i>
+      <i class="fa fa-facebook-square fa-2x"></i>
       </a>
       <a>
-      <i class="fa fa-twitter-square"></i>
+      <i class="fa fa-twitter-square fa-2x"></i>
       </a>
       <a>
-      <i class="fa fa-linkedin-square"></i>
+      <i class="fa fa-linkedin-square fa-2x"></i>
       </a>
+      </div>
  
     <nav class="navbar navbar-default">
   <div class="container-fluid">
