--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="page-header">
       <div class="project-name">The Communi</div>
       <div class="project-tagline">Let the truth prevail.....</div>
-      <div class="navbar-text">
+      <div class="social">
       <a>
       <i class="fa fa-facebook-square fa-2x"></i>
       </a>
