--- a/index.html
+++ b/index.html
@@ -18,15 +18,9 @@
       <div class="project-name">The Communi</div>
       <div class="project-tagline">Let the truth prevail.....</div>
       <div class="social">
-      <a>
-      <i class="fa fa-facebook-square fa-2x"></i>
-      </a>
-      <a>
-      <i class="fa fa-twitter-square fa-2x"></i>
-      </a>
-      <a>
-      <i class="fa fa-linkedin-square fa-2x"></i>
-      </a>
+     <a href="#"><i class="fa fa-lg fa-facebook"></i></a>
+     <a href="#"><i class="fa fa-lg fa-twitter"></i></a>
+     <a href="#"><i class="fa fa-lg fa-linkedin"></i></a>
       </div>
  
     <nav class="navbar navbar-default">
