--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
   <body>
+    <header>
     <section class="page-header">
       <div class="project-name">The Communi</div>
       <div class="project-tagline">Let the truth prevail.....</div>
@@ -22,7 +23,7 @@
      <a href="#"><i class="fa fa-lg fa-twitter"></i></a>
      <a href="#"><i class="fa fa-lg fa-linkedin"></i></a>
       </div>
- 
+ <div>
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -77,7 +78,9 @@
     </div> <!-- /.navbar-collapse -->
   </div> <!-- /.container-fluid -->
 </nav>
+      </div>
     </section>
+    </header>
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
      <!-- Include all compiled plugins (below), or include individual files as needed -->
